split crypto